linters: run antsibull-changelog lint

--- a/tox.ini
+++ b/tox.ini
@@ -9,10 +9,12 @@ skipsdist = True
 
 [testenv:linters]
 install_command = pip install {opts} {packages}
-deps = flake8
+deps =
+  flake8
+  antsibull-changelog
 commands =
   flake8 plugins {posargs}
-
+  antsibull-changelog lint
 [testenv:venv]
 # This env is used to push new release on Galaxy
 install_command = pip install {opts} {packages}
