--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,8 @@ deps =
 commands =
   flake8 plugins {posargs}
   antsibull-changelog lint
+  ./check-ignores-order
+
 [testenv:venv]
 # This env is used to push new release on Galaxy
 install_command = pip install {opts} {packages}
