--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -93,6 +93,7 @@ action_groups:
   - vmware_host_service_info
   - vmware_host_service_manager
   - vmware_host_snmp
+  - vmware_host_sriov
   - vmware_host_ssl_info
   - vmware_host_vmhba_info
   - vmware_host_vmnic_info
