--- a/changelogs/fragments/275_vmware_vcenter_settings_info.yml
+++ b/changelogs/fragments/275_vmware_vcenter_settings_info.yml
@@ -1,2 +1,2 @@
 minor_changes:
-  - vmware_vcenter_settings_info: a new module for gather information about vCenter settings
+  - vmware_vcenter_settings_info - a new module for gather information about vCenter settings
