--- a/tests/integration/targets/vmware_vcenter_settings_info/tasks/main.yml
+++ b/tests/integration/targets/vmware_vcenter_settings_info/tasks/main.yml
@@ -17,5 +17,5 @@
 
 - assert:
     that:
-      - gather_info_about_vcenter_settings_result.result is defined
-      - gather_info_about_vcenter_settings_result.result | length == 34
+      - gather_info_about_vcenter_settings_result.vcenter_config_info is defined
+      - gather_info_about_vcenter_settings_result.vcenter_config_info | length == 34
