--- a/tests/integration/targets/vmware_vcenter_settings_info/tasks/main.yml
+++ b/tests/integration/targets/vmware_vcenter_settings_info/tasks/main.yml
@@ -19,3 +19,22 @@
     that:
       - gather_info_about_vcenter_settings_result.vcenter_config_info is defined
       - gather_info_about_vcenter_settings_result.vcenter_config_info | length == 34
+
+- name: "Get a list of information about vCenter settings by specifying the properties"
+  vmware_vcenter_settings_info:
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    schema: vsphere
+    properties:
+      - config.workflow.port
+      - config.log.level
+      - vpxd.locale
+    validate_certs: no
+  register: get_list_of_info_about_vcenter_settings_result
+
+- assert:
+    that:
+      - get_list_of_info_about_vcenter_settings_result.vcenter_config_info['config.workflow.port'] is defined
+      - get_list_of_info_about_vcenter_settings_result.vcenter_config_info['config.log.level'] is defined
+      - get_list_of_info_about_vcenter_settings_result.vcenter_config_info['vpxd.locale'] is defined
