added always block to ensure deletion tasks always run

--- a/tests/integration/targets/vmware_vm_storage_policy/tasks/main.yml
+++ b/tests/integration/targets/vmware_vm_storage_policy/tasks/main.yml
@@ -85,6 +85,8 @@
       that:
         - not policy_delete.changed
 
+  always:
+
   - name: Delete Tags
     vmware_tag:
       hostname: '{{ vcenter_hostname }}'
