--- a/tests/integration/targets/vmware_vm_storage_policy/tasks/main.yml
+++ b/tests/integration/targets/vmware_vm_storage_policy/tasks/main.yml
@@ -2,6 +2,9 @@
 # Copyright: (c) 2020, Dustin Scott <sdustin@vmware.com>
 # GNU General Public License v3.0+ (see COPYING or https://www.gnu.org/licenses/gpl-3.0.txt)
 
+- import_role:
+    name: prepare_vmware_tests
+
 - block:
   - name: Create category
     vmware_category:
