--- a/tests/integration/targets/vmware_dvs_portgroup_find/tasks/main.yml
+++ b/tests/integration/targets/vmware_dvs_portgroup_find/tasks/main.yml
@@ -21,3 +21,21 @@
 - assert:
     that:
       - dvspg_0001.dvs_portgroups is defined
+
+- name: get portgroups by vlanid
+  vmware_dvs_portgroup_find:
+    validate_certs: False
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    vlanid: "0"
+  register: dvspgvlid_0001
+
+- debug:
+    var: dvspgvlid_0001
+
+- assert:
+    that:
+      - dvspgvlid_0001.dvs_portgroups is defined
+      - dvspgvlid_0001.dvs_portgroups[1] is defined
+      - dvspgvlid_0001.dvs_portgroups[1].vlan_id == "0"
