Fix after rebase main

--- a/tests/integration/targets/inventory_vmware_vm_inventory/playbook/test_options.yml
+++ b/tests/integration/targets/inventory_vmware_vm_inventory/playbook/test_options.yml
@@ -16,14 +16,12 @@
           hostnames:
             - 'skip_undefined_empty_none_var'
             - 'config.name + "_" + runtime.powerState'
-   
-    - name: Test properties option are populate  
+    - name: Test properties option are populate
       assert:
         that:
           - "'config.name' in test_host.value"
           - "'runtime.powerState' in test_host.value"
           - "'name' not in test_host.value"
-
     - name: Test hostnames option
       assert:
         that:
@@ -38,8 +36,7 @@
           strict: False
           with_nested_properties: False
           properties: ['all']
-   
-    - name: Test properties(all) option are populate  
+    - name: Test properties(all) option are populate
       assert:
         that:
           - "'name' in test_host.value"
@@ -55,8 +52,7 @@
           with_nested_properties: False
           properties:
             - config
-   
-    - name: Test properties(config) option are populate  
+    - name: Test properties(config) option are populate
       assert:
         that:
           - "'name' not in test_host.value"
@@ -70,7 +66,6 @@
           plugin: community.vmware.vmware_vm_inventory
           strict: False
           with_path: True
-   
     - name: Test path option
       assert:
         that:
@@ -83,13 +78,11 @@
           plugin: community.vmware.vmware_vm_inventory
           strict: False
           with_path: my_center
-
     - name: Test path option with rooted path
       assert:
         that:
           - "'path' in test_host.value"
           - "'my_center' in test_host.value.group_names"
-
 
     - name: Inventory 'with_nested_properties' option
       include_tasks: build_inventory.yml
@@ -100,9 +93,7 @@
           properties:
             - config.name
             - config.uuid
-
           with_nested_properties: True
-
     - name: Test 'with_nested_properties' option
       assert:
         that:
@@ -122,14 +113,13 @@
 
           with_nested_properties: False
           with_sanitized_property_name: True
-
     - name: Test 'with_nested_properties' option
       assert:
         that:
           - test_host.value.runtime_power_state is defined
 
 
-    - name: Inventory 'Constructable' options
+    - name: Inventory 'Constructable' options - keyed_groups
       include_tasks: build_inventory.yml
       vars:
         content: |-
@@ -141,21 +131,60 @@
             - config.uuid
             - config.guestId
             - runtime.powerState
-
-          compose:
-            ansible_host: 'config.name'
-            composed_var: 'config.name'
-
-          groups:
-            VMs: true
-
           keyed_groups:
             - key: 'config.guestId'
               separator: ''
             - key: 'runtime.powerState'
               separator: ''
+    - name: Test 'Constructable' options - keyed_groups
+      assert:
+        that:
+          - "'poweredOff' in test_host.value.group_names"
 
-    - name: Test 'Constructable' options
+
+    - name: Inventory filters options
+      include_tasks: build_inventory.yml
+      vars:
+        content: |-
+          plugin: community.vmware.vmware_vm_inventory
+          strict: False
+          with_nested_properties: True
+          properties:
+            - config.name
+            - runtime.powerState
+          filters:
+            - runtime.powerState == "poweredOff"
+          hostnames:
+            - config.name
+    - name: Test filters options
+      assert:
+        that:
+          - "'DC0_H0_VM0' in test_host.value.groups.all"
+
+
+    - name: Inventory 'Constructable' options - compose, groups
+      include_tasks: build_inventory.yml
+      vars:
+        content: |-
+          plugin: community.vmware.vmware_vm_inventory
+          strict: False
+          with_nested_properties: True
+          properties:
+            - config.uuid
+            - config.guestId
+            - runtime.powerState
+            - config.name
+          compose:
+            ansible_host: 'config.name'
+            composed_var: 'config.name'
+          groups:
+            VMs: true
+          keyed_groups:
+            - key: 'config.guestId'
+              separator: ''
+            - key: 'runtime.powerState'
+              separator: ''
+    - name: Test 'Constructable' options - compose, groups
       assert:
         that:
           - "'VMs' in test_host.value.group_names"
@@ -164,6 +193,47 @@
           - "'composed_var' in test_host.value"
           - test_host.value.ansible_host == test_host.value.config.name
           - test_host.value.composed_var == test_host.value.config.name
+
+
+    - name: Inventory 'with_tag' option
+      include_tasks: build_inventory.yml
+      vars:
+        content: |-
+          plugin: community.vmware.vmware_vm_inventory
+          strict: False
+          with_nested_properties: True
+          with_tags: True
+          properties:
+            - config.name
+            - config.uuid
+            - config.guestId
+            - runtime.powerState
+    - name: Test 'with_tags' options
+      assert:
+        that:
+          - "'tags' in test_host.value"
+      when: not (vcsim is defined)
+
+
+    - name: Inventory with binary values (https://github.com/ansible/awx/issues/7052)
+      include_tasks: build_inventory.yml
+      vars:
+        content: |-
+          plugin: community.vmware.vmware_vm_inventory
+          strict: False
+          with_nested_properties: True
+          properties:
+            - config.vmxConfigChecksum
+            - config.name
+            - summary.runtime.powerState
+          hostnames:
+            - config.name
+    - name: Test filters options
+      assert:
+        that:
+          - "'DC0_H0_VM0' in test_host.value.groups.all"
+          - test_host.value.config.name is defined
+          - test_host.value.config.vmxConfigChecksum is defined
 
 
     - name: Inventory 'resources' option
@@ -183,7 +253,6 @@
               resources:
                 - compute_resource:
                     - DC0_C0
-
     - name: Test 'resources' options
       assert:
         that:
@@ -207,7 +276,6 @@
                 - compute_resource:
                     - DC0_C0
                     - DC0_C0_NOT_EXIST
-
     - name: Test 'resources' options with 'DC0_C0' and 'DC0_C0_NOT_EXIST'
       assert:
         that:
@@ -235,7 +303,6 @@
               resources:
                 - compute_resource:
                     - DC0_C0_NOT_EXIST
-
     - name: Test 'resources' options with 'DC0_C0' and 'DC0_C0_NOT_EXIST' using two 'datacenter'
       assert:
         that:
@@ -258,29 +325,7 @@
               resources:
                 - compute_resource:
                     - DC0_C0_NOT_EXIST
-
     - name: Test 'resources' options with 'DC0_C0_NOT_EXIST'
       assert:
         that:
           - hostvars | length == 0
-
-
-    - name: Inventory 'with_tag' option
-      include_tasks: build_inventory.yml
-      vars:
-        content: |-
-          plugin: community.vmware.vmware_vm_inventory
-          strict: False
-          with_nested_properties: True
-          with_tags: True
-          properties:
-            - config.name
-            - config.uuid
-            - config.guestId
-            - runtime.powerState
-
-    - name: Test 'with_tags' options
-      assert:
-        that:
-          - "'tags' in test_host.value"
-      ignore_errors: yes # for vcsim 
