--- a/tests/integration/targets/vmware_cluster_facts/tasks/main.yml
+++ b/tests/integration/targets/vmware_cluster_facts/tasks/main.yml
@@ -56,37 +56,38 @@
   name: Ensure facts are gathered for the given cluster in check mode
 
 
-- when: vcsim is not defined
-  block:
-  - import_role:
-      name: prepare_vmware_tests
-    vars:
-      setup_category: true
-      setup_tag: true
-
-  - name: Apply tag to cluster
-    vmware_tag_manager:
-      hostname: "{{ vcenter_hostname }}"
-      username: "{{ vcenter_username }}"
-      password: "{{ vcenter_password }}"
-      validate_certs: no
-      tag_names:
-        - '{{ cluster_category }}:{{ cluster_tag }}'
-      state: present
-      object_name: '{{ ccr1 }}'
-      object_type: ClusterComputeResource
-
-  - name: Get facts about cluster
-    vmware_cluster_facts:
-      hostname: "{{ vcenter_hostname }}"
-      username: "{{ vcenter_username }}"
-      password: "{{ vcenter_password }}"
-      validate_certs: no
-      show_tag: True
-      cluster_name: "{{ ccr1 }}"
-    register: cluster_info
-
-  - assert:
-      that:
-        - cluster_info is defined
-        - cluster_info.clusters[ccr1].tags is defined
+# Disabled until we get a fix for https://github.com/ansible-collections/vmware/issues/301
+#- when: vcsim is not defined
+#  block:
+#  - import_role:
+#      name: prepare_vmware_tests
+#    vars:
+#      setup_category: true
+#      setup_tag: true
+#
+#  - name: Apply tag to cluster
+#    vmware_tag_manager:
+#      hostname: "{{ vcenter_hostname }}"
+#      username: "{{ vcenter_username }}"
+#      password: "{{ vcenter_password }}"
+#      validate_certs: no
+#      tag_names:
+#        - '{{ cluster_category }}:{{ cluster_tag }}'
+#      state: present
+#      object_name: '{{ ccr1 }}'
+#      object_type: ClusterComputeResource
+#
+#  - name: Get facts about cluster
+#    vmware_cluster_facts:
+#      hostname: "{{ vcenter_hostname }}"
+#      username: "{{ vcenter_username }}"
+#      password: "{{ vcenter_password }}"
+#      validate_certs: no
+#      show_tag: True
+#      cluster_name: "{{ ccr1 }}"
+#    register: cluster_info
+#
+#  - assert:
+#      that:
+#        - cluster_info is defined
+#        - cluster_info.clusters[ccr1].tags is defined
