--- a/tests/integration/targets/vmware_migrate_vmk/tasks/main.yml
+++ b/tests/integration/targets/vmware_migrate_vmk/tasks/main.yml
@@ -84,13 +84,62 @@
         device: "{{ device_name }}"
         network:
           type: 'static'
-          ip_address: 100.64.0.1
+          ip_address: 192.168.0.254
           subnet_mask: 255.255.255.0
       register: prepare_integration_tests_result
 
     - assert:
         that:
           - prepare_integration_tests_result.changed is sameas true
+
+    - name: "Gather dvSwitch info"
+      vmware_dvswitch_info:
+        hostname: "{{ vcenter_hostname }}"
+        username: "{{ vcenter_username }}"
+        password: "{{ vcenter_password }}"
+        validate_certs: no
+      register: gather_dvswitch_info_result
+
+    - name: "Create a new dvSwitch block"
+      when:
+        - >-
+          gather_dvswitch_info_result.distributed_virtual_switches
+          | map(attribute='configure.name')
+          | map('regex_search',dvswitch1)
+          | list
+          | length == 0
+      block:
+        - name: "Create a new dvSwitch"
+          vmware_dvswitch:
+            hostname: "{{ vcenter_hostname }}"
+            username: "{{ vcenter_username }}"
+            password: "{{ vcenter_password }}"
+            validate_certs: no
+            datacenter: "{{ dc1 }}"
+            switch: "{{ dvswitch1 }}"
+            uplink_quantity: 1
+          register: create_new_dvswitch_result
+
+        - assert:
+            that:
+              - create_new_dvswitch_result.changed is sameas true
+
+        - name: "Add ESXi host to dvSwitch"
+          vmware_dvs_host:
+            hostname: "{{ vcenter_hostname }}"
+            username: "{{ vcenter_username }}"
+            password: "{{ vcenter_password }}"
+            validate_certs: no
+            esxi_hostname: "{{ esxi1 }}"
+            switch_name: "{{ dvswitch1 }}"
+            vmnics:
+              - vmnic1
+          register: add_esxi_host_dvswitch_result
+
+        - assert:
+            that:
+              - add_esxi_host_dvswitch_result.changed is sameas true
+
 
     - name: "Create new a port group of dvSwitch"
       vmware_dvs_portgroup:
@@ -181,3 +230,69 @@
 - assert:
     that:
       - migrate_management_vmk_dvswitch_to_vswitch_idempotency_check_result.changed is sameas false
+
+- name: "Delete the used objects for integration test"
+  block:
+    - name: "Delete the used dvSwitch for integration test"
+      vmware_dvswitch:
+        hostname: "{{ vcenter_hostname }}"
+        username: "{{ vcenter_username }}"
+        password: "{{ vcenter_password }}"
+        validate_certs: no
+        datacenter: "{{ dc1 }}"
+        switch: "{{ dvswitch1 }}"
+        uplink_quantity: 1
+        state: absent
+      register: delete_dvswitch_result
+
+    - assert:
+        that:
+          - delete_dvswitch_result.changed is sameas true
+
+    - name: "Delete the used vmkernel for integration test"
+      vmware_vmkernel:
+        hostname: "{{ vcenter_hostname }}"
+        username: "{{ vcenter_username }}"
+        password: "{{ vcenter_password }}"
+        validate_certs: no
+        esxi_hostname: "{{ esxi1 }}"
+        vswitch_name: "{{ switch1 }}"
+        portgroup_name: "{{ vswitch_pg_name_for_test }}"
+        device: "{{ device_name }}"
+        state: absent
+      register: delete_vmk_result
+
+    - assert:
+        that:
+          - delete_vmk_result.changed is sameas true
+
+    - name: "Delete the used port group for integration test"
+      vmware_portgroup:
+        hostname: "{{ vcenter_hostname }}"
+        username: "{{ vcenter_username }}"
+        password: "{{ vcenter_password }}"
+        validate_certs: no
+        esxi_hostname: "{{ esxi1 }}"
+        switch: "{{ switch1 }}"
+        portgroup: "{{ vswitch_pg_name_for_test }}"
+        state: absent
+      register: delete_vswitch_pg_result
+
+    - assert:
+        that:
+          - delete_vswitch_pg_result.changed is sameas true
+
+    - name: "Delete the used vSwitch for integration test"
+      vmware_vswitch:
+        hostname: "{{ vcenter_hostname }}"
+        username: "{{ vcenter_username }}"
+        password: "{{ vcenter_password }}"
+        validate_certs: no
+        esxi_hostname: "{{ esxi1 }}"
+        switch: "{{ switch1 }}"
+        state: absent
+      register: delete_vswitch_result
+
+    - assert:
+        that:
+          - delete_vswitch_result.changed is sameas true
