--- a/changelogs/fragments/321-vmware_cluster_info.yml
+++ b/changelogs/fragments/321-vmware_cluster_info.yml
@@ -1,2 +1,2 @@
 minor_changes:
-  - vmware_cluster_info - added ``properties`` and ``schema`` options.
+  - vmware_cluster_info - added ``properties`` and ``schema`` options and supported the getting of clusters resource summary information.
