modify test case

--- a/tests/integration/targets/vmware_guest_disk/tasks/main.yml
+++ b/tests/integration/targets/vmware_guest_disk/tasks/main.yml
@@ -117,14 +117,17 @@
     name: "{{ virtual_machines[0].name }}"
     disk:
       - size_gb: 1
+        type: eagerzeroedthick
         datastore: "{{ rw_datastore }}"
+        disk_mode: "independent_nonpersistent"
         scsi_controller: 2
         state: present
         unit_number: 4
         iolimit:
           limit: 1506
           shares:
-            level: normal
+            level: custom
+            level_value: 1305
   register: test_custom_IoLimit_shares
 
 - debug:
@@ -149,7 +152,7 @@
         state: present
         unit_number: 4
         iolimit:
-          limit: 1506
+          limit: 1500
           shares:
             level: custom
             level_value: 1305
@@ -177,7 +180,7 @@
         state: present
         unit_number: 4
         iolimit:
-          limit: 1506
+          limit: 1500
           shares:
             level: low
   register: test_shares_IoLimit
@@ -335,11 +338,11 @@
     disk:
       - state: "absent"
         scsi_controller: 0
-        unit_number: 4
+        unit_number: 3
         destroy: true
       - state: "absent"
         scsi_controller: 0
-        unit_number: 5
+        unit_number: 4
   register: test_remove_with_destroy
 
 - debug:
@@ -460,6 +463,40 @@
   assert:
     that:
       - test_reconfig_nvme_disk is changed
+
+- name: create 2 new disks on existing SATA controller and NVMe controller
+  vmware_guest_disk:
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    datacenter: "{{ dc1 }}"
+    validate_certs: no
+    name: "{{ virtual_machines[0].name }}"
+    disk:
+      - datastore: "{{ rw_datastore }}"
+        disk_mode: "independent_persistent"
+        controller_type: 'sata'
+        controller_number: 1
+        unit_number: 6
+        size_gb: 1
+        state: present
+      - datastore: "{{ rw_datastore }}"
+        disk_mode: "independent_persistent"
+        controller_type: 'nvme'
+        controller_number: 0
+        unit_number: 4
+        size: 1gb
+        state: present
+        type: thin
+  register: test_create_two_disks
+
+- debug:
+    msg: "{{ test_create_two_disks }}"
+
+- name: assert that changes were made
+  assert:
+    that:
+      - test_create_two_disks is changed
 
 - name: remove SATA and NVMe disks
   vmware_guest_disk:
