--- a/changelogs/fragments/364-vmware_vmkernel-replciation-fix.yml
+++ b/changelogs/fragments/364-vmware_vmkernel-replciation-fix.yml
@@ -1,2 +1,2 @@
 bugfixes:
-  - vmware_vmkernel - fixed issue were Repl and ReplNFC services were not being identified as enabled on a vmk interface (https://github.com/ansible-collections/vmware/issues/362).
+  - vmware_vmkernel - fixed issue where Repl and ReplNFC services were not being identified as enabled on a vmk interface (https://github.com/ansible-collections/vmware/issues/362).
