tox: add add_docs environment
Add a tox enviromment to run `add_docs.py`, this way we don't have
to manually create the virtualenv anymore.

--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,9 @@ commands =
   antsibull-changelog lint
   ./check-ignores-order
 
+[testenv:add_docs]
+deps = git+https://github.com/ansible-network/collection_prep
+commands = collection_prep_add_docs -p .
 
 [testenv:antsibull-changelog]
 deps =
