--- a/changelogs/fragments/381-vmware_guest.yml
+++ b/changelogs/fragments/381-vmware_guest.yml
@@ -1,3 +1,3 @@
 minor_changes:
-  - vmware_guest - Fixed issue of comparing latest hardware version str type with int(https://github.com/ansible-collections/vmware/issues/381)
+  - vmware_guest - Fixed issue of comparing latest hardware version str type with int(https://github.com/ansible-collections/community.vmware/issues/381)
   - vmware_guest - Fixed issue of checking hardware version when set VBS(https://github.com/ansible-collections/vmware/issues/351)
