--- a/changelogs/fragments/400-vm-created-on-specified-host.yml
+++ b/changelogs/fragments/400-vm-created-on-specified-host.yml
@@ -1,2 +1,3 @@
 minor_changes:
-  - `vmware_guest` takes now into account the `esxi_hostname` argument to create the vm on the right host according to the doc(https://github.com/ansible-collections/vmware/pull/400)
+  - vmware_guest - takes now into account the ``esxi_hostname`` argument to create the vm on the right host
+    according to the doc (https://github.com/ansible-collections/vmware/pull/359).
