vmware_vm_inventory: Add support for category
Now, vmware_vm_category can retrive categories and
related to tags.

Fixes: #350

Signed-off-by: Abhijeet Kasurde <akasurde@redhat.com>

--- a/tests/integration/targets/inventory_vmware_vm_inventory/playbook/test_options.yml
+++ b/tests/integration/targets/inventory_vmware_vm_inventory/playbook/test_options.yml
@@ -212,6 +212,8 @@
       assert:
         that:
           - "'tags' in test_host.value"
+          - "'categories' in test_host.value"
+          - "'tag_category' in test_host.value"
       when: not (vcsim is defined)
 
 
