vmware_resource_pool: Add new allocation shares options for cpu and memory (#461)
vmware_resource_pool: Add new allocation shares options for cpu and memory

Reviewed-by: https://github.com/apps/ansible-zuul

--- a/tests/integration/targets/vmware_resource_pool/tasks/main.yml
+++ b/tests/integration/targets/vmware_resource_pool/tasks/main.yml
@@ -63,7 +63,7 @@
 
 
 # Testcase 0003: Remove Resource pool
-- name: add resource pool again
+- name: remove resource pool again
   vmware_resource_pool:
     validate_certs: False
     hostname: "{{ vcenter_hostname }}"
@@ -81,7 +81,7 @@
         - "{{ resource_result_0003.changed == true }}"
 
 # Testcase 0004: Remove Resource pool again
-- name: add resource pool again
+- name: remove resource pool again
   vmware_resource_pool:
     validate_certs: False
     hostname: "{{ vcenter_hostname }}"
@@ -97,3 +97,123 @@
   assert:
     that:
         - "{{ resource_result_0004.changed == false }}"
+
+# Testcase 0005: Add Resource pool with the mem_allocation_shares and cpu_allocation_shares parameters
+- name: add resource pool
+  vmware_resource_pool:
+    validate_certs: False
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    datacenter: "{{ dc1 }}"
+    cluster: "{{ ccr1 }}"
+    resource_pool: test_resource_0001
+    mem_shares: custom
+    mem_allocation_shares: 1000
+    cpu_shares: custom
+    cpu_allocation_shares: 1000
+    state: present
+  register: resource_result_0005
+
+- name: ensure a resource pool is present
+  assert:
+    that:
+      - "{{ resource_result_0005.changed == true }}"
+
+# Testcase 0006: Add Resource pool with the mem_allocation_shares and cpu_allocation_shares parameters(idempotency check)
+- name: add resource pool
+  vmware_resource_pool:
+    validate_certs: False
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    datacenter: "{{ dc1 }}"
+    cluster: "{{ ccr1 }}"
+    resource_pool: test_resource_0001
+    mem_shares: custom
+    mem_allocation_shares: 1000
+    cpu_shares: custom
+    cpu_allocation_shares: 1000
+    state: present
+  register: resource_result_0006
+
+- name: make sure a resource pool is not changing
+  assert:
+    that:
+      - "{{ resource_result_0006.changed == false }}"
+
+# Testcase 0007: Remove Resource pool
+- name: remove resource pool
+  vmware_resource_pool:
+    validate_certs: False
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    datacenter: "{{ dc1 }}"
+    cluster: "{{ ccr1 }}"
+    resource_pool: test_resource_0001
+    state: absent
+  register: resource_result_0007
+
+- name: check if resource pool is removed
+  assert:
+    that:
+        - "{{ resource_result_0007.changed == true }}"
+
+# Testcase 0008: Add Resource pool without the mem_allocation_shares and cpu_allocation_shares parameters
+- name: add resource pool
+  vmware_resource_pool:
+    validate_certs: False
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    datacenter: "{{ dc1 }}"
+    cluster: "{{ ccr1 }}"
+    resource_pool: test_resource_0001
+    mem_shares: custom
+    cpu_shares: custom
+    state: present
+  register: resource_result_0008
+
+- name: ensure a resource pool is present
+  assert:
+    that:
+      - "{{ resource_result_0008.changed == true }}"
+
+# Testcase 0009: Add Resource pool without the mem_allocation_shares and cpu_allocation_shares parameters(idempotency check)
+- name: add resource pool
+  vmware_resource_pool:
+    validate_certs: False
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    datacenter: "{{ dc1 }}"
+    cluster: "{{ ccr1 }}"
+    resource_pool: test_resource_0001
+    mem_shares: custom
+    cpu_shares: custom
+    state: present
+  register: resource_result_0009
+
+- name: make sure a resource pool is not changing
+  assert:
+    that:
+      - "{{ resource_result_0009.changed == false }}"
+
+# Testcase 0010: Remove Resource pool
+- name: remove resource pool
+  vmware_resource_pool:
+    validate_certs: False
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    datacenter: "{{ dc1 }}"
+    cluster: "{{ ccr1 }}"
+    resource_pool: test_resource_0001
+    state: absent
+  register: resource_result_0010
+
+- name: check if resource pool is removed
+  assert:
+    that:
+        - "{{ resource_result_0010.changed == true }}"
