tox: run yamllint
Run `yamllint` in the `linters` target.

--- a/tox.ini
+++ b/tox.ini
@@ -12,10 +12,12 @@ install_command = pip install {opts} {packages}
 deps =
   flake8
   antsibull-changelog
+  yamllint
 commands =
   flake8 plugins {posargs}
   antsibull-changelog lint
   ./check-ignores-order
+  yamllint -c .yamllint.yaml tests
 
 [testenv:add_docs]
 deps = git+https://github.com/ansible-network/collection_prep
