Update comment in changelog.
Co-authored-by: Mario Lenz <m@riolenz.de>

--- a/changelogs/fragments/489_vmware_vm_inventory_port_cast_integer.yaml
+++ b/changelogs/fragments/489_vmware_vm_inventory_port_cast_integer.yaml
@@ -1,2 +1,2 @@
 bugfixes:
-- vmware_vm_inventory - ensure self.port is integer (https://github.com/ansible-collections/community.vmware/pull/489).
+- vmware_vm_inventory - ensure self.port is integer (https://github.com/ansible-collections/community.vmware/issues/488).
