--- a/changelogs/fragments/499-vmware_deploy_ovf.yml
+++ b/changelogs/fragments/499-vmware_deploy_ovf.yml
@@ -1,2 +1,2 @@
 bugfixes:
-  - vmware_deploy_ovf - fixed the issue that the name variable referenced error occurs when the check mode (https://github.com/ansible-collections/community.vmware/pull/499).
+  - vmware_deploy_ovf - fixed an UnboundLocalError for variable 'name' in check mode (https://github.com/ansible-collections/community.vmware/pull/499).
