vmware_datastore_cluster_manager: new module
Module to manage datastores in the given datastore cluster.

Fixes: #503

Signed-off-by: Abhijeet Kasurde <akasurde@redhat.com>

--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -22,6 +22,7 @@ action_groups:
   - vmware_content_library_manager
   - vmware_datacenter
   - vmware_datastore_cluster
+  - vmware_datastore_cluster_manager
   - vmware_datastore_info
   - vmware_datastore_maintenancemode
   - vmware_deploy_ovf
