--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -31,6 +31,7 @@ action_groups:
   - vmware_dns_config
   - vmware_drs_group
   - vmware_drs_group_info
+  - vmware_drs_group_manager
   - vmware_drs_rule_info
   - vmware_dvs_host
   - vmware_dvs_portgroup
